# python-sdk-bmc

./: .gitignore  .openapi-generator-ignore  .pylintrc  CONTRIBUTING.md  README.md  extract-version.sh  openapi-generator-config.yaml  patched-spec.yaml
pnap_audit_api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
pnap_audit_api/.openapi-generator/: FILES
pnap_audit_api/docs/: ApiAction.md  ApiActionAllOf.md  Error.md  Event.md  EventsApi.md  Headers.md  Request.md  Response.md  UserInfo.md
pnap_audit_api/pnap_audit_api/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  version.py
pnap_audit_api/test/: test_api_action.py  test_api_action_all_of.py  test_event.py  test_events_api.py  test_headers.py  test_request.py  test_response.py  test_user_info.py
pnap_bmc_api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini  version.py
pnap_bmc_api/.openapi-generator/: FILES
pnap_bmc_api/docs/: ActionResult.md  DeleteResult.md  DeleteSshKeyResult.md  Error.md  EsxiDatastoreConfiguration.md  EsxiOsConfiguration.md  GpuConfiguration.md  IpBlocksConfiguration.md  NetworkConfiguration.md  OsConfiguration.md  OsConfigurationCloudInit.md  OsConfigurationIPXE.md  OsConfigurationIPXENativeVlanConfiguration.md  OsConfigurationMap.md  OsConfigurationMapEsxi.md  OsConfigurationMapProxmox.md  OsConfigurationNetrisController.md  OsConfigurationNetrisSoftgate.md  OsConfigurationWindows.md  PrivateNetworkConfiguration.md  PublicNetworkConfiguration.md  Quota.md  QuotaEditLimitRequest.md  QuotaEditLimitRequestDetails.md  QuotaEditLimitRequestDetailsAllOf.md  QuotasApi.md  RebootRequest.md  RelinquishIpBlock.md  ReservationTransferDetails.md  ResetResult.md  SSHKeysApi.md  Server.md  ServerCreate.md  ServerIpBlock.md  ServerNetworkUpdate.md  ServerPatch.md  ServerPrivateNetwork.md  ServerProvision.md  ServerPublicNetwork.md  ServerReserve.md  (+9 more)
pnap_bmc_api/pnap_bmc_api/: __init__.py  __version__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  version.py
pnap_bmc_api/test/: test_action_result.py  test_delete_result.py  test_delete_ssh_key_result.py  test_error.py  test_ip_blocks_configuration.py  test_network_configuration.py  test_os_configuration.py  test_os_configuration_map.py  test_os_configuration_map_esxi.py  test_os_configuration_map_proxmox.py  test_os_configuration_windows.py  test_private_network_configuration.py  test_quota.py  test_quota_edit_limit_request.py  test_quota_edit_limit_request_details.py  test_quota_edit_limit_request_details_all_of.py  test_quotas_api.py  test_relinquish_ip_block.py  test_reset_result.py  test_server.py  test_server_create.py  test_server_ip_block.py  test_server_patch.py  test_server_private_network.py  test_server_reserve.py  test_server_reset.py  test_servers_api.py  test_ssh_key.py  test_ssh_key_create.py  test_ssh_key_update.py  test_ssh_keys_api.py  test_tag_assignment.py  test_tag_assignment_request.py
pnap_location_api/: README.md  pyproject.toml  setup.py
pnap_location_api/.openapi-generator/: FILES
pnap_tag_api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
pnap_tag_api/docs/: Tag.md  (+6 more)
(+681 files in other folders)
