[tool.poetry]

from pnap_tag_api.version import VERSION
description = "Tags API"
authors = ["PhoenixNAP Team <support@phoenixnap.com>"]
license = "Apache 2.0"
readme = readme()
repository = "https://github.com/phoenixnap/python-sdk-bmc"
keywords = ["OpenAPI", "OpenAPI-Generator", "Tags API"]
include = ["pnap_tag_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

NAME = "pnap-tag-api"

def readme():
	with open('README.md', encoding='utf-8') as f:
		return f.read()

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"